[package]
name = "projsync"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
argh = { git = "https://github.com/google/argh", rev = "e901d3a1c" }
camino = "1.1.6"
untildify = { git = "https://github.com/aminya/untildify", rev = "6be54e10f" }
wslpath = "0.0.2"
